fix icon not showing

--- a/styles/scss/components/_quotes-forms.scss
+++ b/styles/scss/components/_quotes-forms.scss
@@ -38,7 +38,7 @@
             outline: none;
 
             &.active {
-               background-image: url("pairgo/images/icons/icon-error.svg");
+               background-image: url("../../../images/icons/icon-error.svg");
                background-repeat: no-repeat;
                background-size: 1.5rem;
                background-position: center right 2.5rem;
